--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mario</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/board.css">
+    <link rel="stylesheet" href="./css/pipe.css">
+    <link rel="stylesheet" href="./css/mario.css">
+    <link rel="stylesheet" href="./css/jump.css">
+    <script src="js/script.js" defer>
+    </script>
 </head>
+
 <body>
+    <div class="board">
+        <img src="assets/mario.gif" alt="Mario" class="mario">
+        <img src="assets/pipe.webp" alt="Pipe" class="pipe">
+    </div>
 </body>
+
 </html>
