--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/pipe.css">
     <link rel="stylesheet" href="./css/mario.css">
     <link rel="stylesheet" href="./css/jump.css">
+    <link rel="stylesheet" href="./css/clouds.css">
     <script src="js/script.js" defer>
     </script>
 </head>
@@ -19,7 +20,8 @@
     <div class="board">
         <img src="assets/mario.gif" alt="Mario" class="mario">
         <img src="assets/pipe.webp" alt="Pipe" class="pipe">
+        <img src="assets/clouds.png" alt="Clouds" class="clouds">
     </div>
+    <div class="footer"></div>
 </body>
-
 </html>
